update jar with new API paths. Consolidate path segment encoding function